--- a/SKillsChecks/shelfie/package.json
+++ b/SKillsChecks/shelfie/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "massive": "^5.7.7",
+    "nodemon": "^1.18.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
@@ -16,6 +20,8 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "main": "server.js",
+  "proxy": "http://localhost:4500",
   "browserslist": [
     ">0.2%",
     "not dead",
